# fpa-revops-agents

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  main.py  pyproject.toml
agents/: Dockerfile  fix.py
agents/api/: main.py
agents/core/: llm_client.py  loop.py  memory.py
agents/data/: answer_key.json  budget.csv  build_golden.py  generator.py  golden.jsonl  static_cases.jsonl  transactions.csv
agents/domain_fpa/: agent.py  memory.py  normalizer.py  tools.py
agents/evals/: freeze_outputs.py  grade_frozen.py  load_golden.py  runner.py  schemas.py  stub_agent.py
agents/memory/: store.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatView.jsx  PipelineView.jsx  ResultCard.jsx  SetupForm.jsx  Sidebar.jsx
frontend/src/lib/: utils.js
