[project]
name = "fpa-revops-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langfuse>=4.9.1",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
]
